<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/imc_center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false">

        <!--Weight label    -->
        <TextView
            android:id="@+id/imc_tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_weight"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!--Weight input-->
        <EditText
            android:id="@+id/imc_input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imc_tv_weight"
            android:inputType="numberDecimal"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!--Kilograms label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_kilograms"
            android:layout_alignBaseline="@+id/imc_input_weight"
            android:layout_alignEnd="@+id/imc_input_weight"
            android:layout_alignRight="@+id/imc_input_weight"/>

        <!--Tallness label-->
        <TextView
            android:id="@+id/imc_tv_tallness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imc_input_weight"
            android:layout_marginTop="10dp"
            android:text="@string/label_tallness"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!--Tallness input-->
        <EditText
            android:id="@+id/imc_input_tallness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imc_tv_tallness"
            android:inputType="numberDecimal"
            android:textAppearance="?android:textAppearanceMedium" />

        <!--Meters label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_meters"
            android:layout_alignBaseline="@+id/imc_input_tallness"
            android:layout_alignEnd="@+id/imc_input_tallness"
            android:layout_alignRight="@+id/imc_input_tallness"/>

        <Button
            android:id="@+id/imc_bt_evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_evaluate"
            android:layout_below="@+id/imc_input_tallness"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imc_center_layout"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="gone"/>


</RelativeLayout>
